--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^20.5.6",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.17",
-    "next": "13.4.17",
+    "eslint-config-next": "13.4.19",
+    "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.65.1"
+    "sass": "^1.66.1",
+    "typescript": "^5.2.2"
   }
 }
