--- a/backend/site/blueprints/pages/default.yml
+++ b/backend/site/blueprints/pages/default.yml
@@ -15,7 +15,6 @@ columns:
     sections:
       pages:
         type: pages
-        template: default
+        template: page
       files:
         type: files
-
