--- a/backend/site/blueprints/pages/pages.yml
+++ b/backend/site/blueprints/pages/pages.yml
@@ -21,3 +21,13 @@ fields:
         type: text
       btn:
         type: text
+  articles:
+    label: Articles
+    type: structure
+    fields:
+      icon:
+        type: files
+      title:
+        type: text
+      text:
+        type: text
