--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-API_URL=http://localhost:8080/api/query
-# API_URL=http://a0596957.xsph.ru/headless/api/query
+# API_URL=http://localhost:8080/api/query
+API_URL=http://anakolchin.temp.swtest.ru/api/query
